# world2data

./: .gitignore  AGENT_PROMPT.md  HACKATHON_EXECUTION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  W2D_OpenUSD_Layering_Protocol.md  WORLD2DATA_REVISED_PLAN.md  World2Data.txt  conftest.py  demo_run.py  e2e_output.usda  example.md  flake.nix  generate_demo.py  generate_test_video.py  human_review_ui.py  main.py  model_interfaces.py  pipeline_controller.py  pyproject.toml  real_scene.usda  real_temporal.usda  real_video_output.usda  scene_fusion.py  test_demo_components.py  test_pipeline.py  visualize_impact.py
.github/skills/project-spec-refiner/: SKILL.md
.github/skills/project-spec-refiner/agents/: openai.yaml
.github/skills/project-spec-refiner/references/: ACCEPTANCE_CRITERIA_PATTERNS.md  BACKLOG_TEMPLATE.md  INTERVIEW_CHECKLIST.md  SPEC_TEMPLATE.md
demo/yolo_live_labels/: README.md  live_labels.py
output/: camera_poses.usda  point_cloud_frames.usda
outputs/: camera_calibration.json  camera_calibration.usda  centroids_only_smoke.usda  document_5206564050057593227_360p30.usda
outputs/protocol_demo_output_5fps/: camera_poses.usda  particle_tracks_debug.usda  particle_tracks_debug_depth1p5.usda  particle_tracks_debug_spawnfromcloud.usda  particle_tracks_debug_spawnfromcloud_v2.usda  particle_tracks_debug_spawnfromcloud_v3.usda  particle_tracks_merged.usda  point_cloud_frames.usda  yolo_observations.usda
outputs/protocol_demo_output_5fps/particle_tracks_debug_merged_track_point_clouds/: bottle_5.npy  cell_phone_2.npy  cell_phone_3.npy  cell_phone_4.npy  cell_phone_8.npy  cell_phone_9.npy  cup_1.npy  cup_10.npy  cup_12.npy  cup_13.npy  cup_14.npy  cup_2.npy  cup_3.npy  cup_5.npy  cup_6.npy  cup_9.npy  keyboard_1.npy  keyboard_10.npy  keyboard_16.npy  keyboard_17.npy  keyboard_18.npy  keyboard_2.npy  keyboard_20.npy  keyboard_21.npy  keyboard_22.npy  keyboard_23.npy  keyboard_24.npy  keyboard_25.npy  keyboard_27.npy  keyboard_28.npy  keyboard_3.npy  keyboard_4.npy  keyboard_5.npy  keyboard_7.npy  keyboard_8.npy  keyboard_9.npy  laptop_4.npy  laptop_5.npy  microwave_1.npy  mouse_8.npy  (+15 more)
scripts/: check_sam3_hf_access.py  convert_demo_output_to_protocol_layers.py  prepare_hackathon_submission.py  view_merged_pointclouds.py
src/world2data/: __init__.py  __main__.py  calibration.py  mesh_adapter.py  model.py  openusd.py  particle_filter.py  particle_filter_adapter.py  point_cloud.py  usd_layers.py  vision.py  yolo_adapter.py
src/world2data/pipeline/: __init__.py  controller.py  demo_run.py  generate_demo.py  human_review_ui.py  model_interfaces.py  scene_fusion.py  visualize_impact.py
submission/: demo_pitfalls_and_limits.md  demo_video_script_60s.md  live_pitch_2min_outline.md  make_onepager_pdf.py  one_pager.md  project_summary_150_300_words.txt  protocol_demo_plan.md  submission_checklist.md  tech_video_script_60s.md
testenvironment/LFM2_5_VL_1_6B/: .gitignore  README.md  requirements.txt  run_model.py  run_video.py
testenvironment/LFM2_5_VL_1_6B/inputs/: config.json
tests/: test_calibration.py  test_demo_components.py  test_e2e_pf_pipeline.py  test_layered_pipeline.py  test_mesh_adapter.py  test_openusd_compat.py  test_particle_filter.py  test_particle_filter_adapter.py  test_pf_integration.py  test_pipeline.py  test_point_cloud_backend.py  test_review_ui.py  test_usd_layers.py  test_yolo_adapter.py
world2data/: __init__.py  calibration.py  model.py  particle_filter.py  vision.py
