[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world2data"
version = "0.1.0"
description = "Generate structured world data from videos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
vision = [
  "accelerate>=0.30",
  "pillow>=10.0",
  "torch>=2.2",
  "transformers>=4.45",
  "ultralytics>=8.3",
]
openusd = [
  "usd-core>=25.11",
]
all = [
  "pytest>=8.0",
  "accelerate>=0.30",
  "pillow>=10.0",
  "torch>=2.2",
  "transformers>=4.45",
  "ultralytics>=8.3",
  "usd-core>=25.11",
]

[project.scripts]
world2data = "world2data.__main__:main"

[tool.setuptools.packages.find]
include = ["world2data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
