[project]
name = "world2data"
version = "0.1.0"
description = "World-to-USD pipeline: converts 2D video into 3D Dynamic Scene Graphs (OpenUSD)"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "google-genai>=1.62.0",
    "gradio>=6.5.1",
    "huggingface-hub[torch]>=0.22",
    "matplotlib>=3.10.8",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pyglet<2",
    "python-dotenv>=1.2.1",
    "rerun-sdk>=0.29.1",
    "roma>=1.5.5",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "trimesh>=4.11.1",
    "usd-core>=25.11",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
